v2 patternfly-react-demo-app
* use patternfly-react/recommended eslint plugin for all lint rules
* update react-scripts to latest for webpack tree shaking
* remove redux saga related boilerplate
* add list-view and integrated table/filter example
* integrate new vert-nav and secondary vert-nav items
* fix watch-css script for livereload of sass

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,9 @@
 /**
   Third Party / Dependency imports here
 */
-$font-path: '../fonts/';
-$img-path: '../img/';
-$icon-font-path: '../fonts/';
+$font-path: './fonts/';
+$img-path: './img/';
+$icon-font-path: './fonts/';
 
 /**
   Patternfly Sass
@@ -23,6 +23,16 @@ $icon-font-path: '../fonts/';
   &:focus,
   &:hover {
     background-color: transparent;
+  }
+}
+
+.breadcrumb {
+  margin-bottom: 10px;
+}
+
+.navbar-pf-vertical {
+  .nav .nav-item-iconic > .pficon-user {
+    padding-right: 7px;
   }
 }
 
