add custom masthead

--- a/src/App.scss
+++ b/src/App.scss
@@ -30,11 +30,11 @@ $icon-font-path: './fonts/';
   margin-bottom: 10px;
 }
 
-.navbar-pf-vertical {
-  .nav .nav-item-iconic > .pficon-user {
-    padding-right: 7px;
-  }
-}
+// .navbar-pf-vertical {
+//   .nav .nav-item-iconic > .pficon-user {
+//     padding-right: 7px;
+//   }
+// }
 
 a:hover,
 a:focus {
